# voxelcraft

./: CMakeLists.txt  README.md
assets/base/: blocks.json  pack.json
src/: atlas.c  atlas.h  block.c  block.h  block_loader.h  chunk.c  chunk.h  main.c  raycast.h  world.h
